fixed collapsible menu on hover on smaller screens

--- a/client/src/app/navbar/navbar.component.css
+++ b/client/src/app/navbar/navbar.component.css
@@ -24,10 +24,10 @@ a {
 }
 
 a:hover {
-  /* background-color: black; */
-  /* color: rgba(0, 0, 0, 0.5) !important; */
-  /* border-radius: 0.25rem; */
-  text-decoration: underline;
+  background-color: black;
+  border-radius: 0.25rem;
+  color: white !important;
+  /* text-decoration: underline; */
 }
 
 .logo {
@@ -43,5 +43,14 @@ a:hover {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+  }
+}
+
+@media (max-width: 991px) {
+  a:hover {
+    background-color: transparent;
+    color: black !important;
+    border-radius: 0;
+    text-decoration: underline;
   }
 }
